# Rust

./: .gitignore  Readme.md  Rust_base_info.xmind
codewar_project/: Cargo.toml
codewar_project/k4_duplicate_encode/: Cargo.toml
codewar_project/k4_duplicate_encode/src/: lib.rs
codewar_project/k5_common_denominators/: Cargo.toml
codewar_project/k5_common_denominators/src/: lib.rs
codewar_project/k6_break_camel_case/: Cargo.toml
codewar_project/k6_break_camel_case/src/: lib.rs
codewar_project/k6_persistent_bugger/: Cargo.toml
codewar_project/k6_persistent_bugger/src/: lib.rs
codewar_project/k6_pi_approximation/: Cargo.toml
codewar_project/k6_pi_approximation/src/: lib.rs
codewar_project/k6_prize_draw/: Cargo.toml
codewar_project/k6_round_by_0_5_steps/: Cargo.toml
codewar_project/k6_write_number_in_expanded_form/: Cargo.toml
codewar_project/k6_your_order_please/: Cargo.toml
codewar_project/k7_accum/: Cargo.toml
codewar_project/k7_accum/src/: lib.rs
codewar_project/k7_growth_of_a_population/: Cargo.toml
codewar_project/k7_moves_in_squared_strings_1/: Cargo.toml
codewar_project/k7_parts_of_a_list/: Cargo.toml
codewar_project/k7_sort_numbers/: Cargo.toml
codewar_project/k7_thinkful_string_drills_repeater/: Cargo.toml
codewar_project/k8_calculate_average/: Cargo.toml
codewar_project/k8_calculate_bmi/: Cargo.toml
codewar_project/k8_century_from_year/: Cargo.toml
codewar_project/k8_find_the_first_non-consecutive_number/: Cargo.toml
codewar_project/main/: Cargo.toml
the_rust_programming_language_e2018/bmi_simulated/: Cargo.toml
(+262 files in other folders)
